src/v1.8/00_Введение.md
# Lemurro

Lemurro представляет собой скелет для разработки CRM-систем

Представляет собой 3 ядра для 3 частей системы
- Ядро `api-core` для разработки API-сервера `api` *(api)*
- Ядро `client-metronic-core-frontend` для разработки web-приложения `client-metronic` *(web)*
- Ядро `client-framework7-core-frontend` для разработки мобильного приложения `client-framework7` *(mobile)*

Реализованы самые часто используемые функции
- Регистрация \ аутентификация \ авторизация пользователей
- Справочники
- Разделы
- Безопасный вход под любым пользователем и возврат обратно
- Отправка email \ sms
- Логгирование действий пользователей

## Системные требования
- PHP >= 7.0.0
- PHP Extensions
  - fileinfo
  - iconv
  - json
  - mbstring
  - pdo_mysql

## Создание нового проекта
Lemurro использует Composer и NPM для управления зависимостями. Перед использованием Lemurro, убедитесь, что у вас установлен Composer и NPM.

1. Скачайте установщик Lemurro через Composer:
  ```bash
composer global require lemurro/installer
```
2. Поместите в ваши переменные среды путь до каталога с установленными глобально пакетами (если не делали этого ранее), это необходимо для получения доступа к команде `lemurro` отовсюду в командной строке, этот каталог расположен в разных местах в зависимости от вашей операционной системы:
  - **Linux**: $HOME/.config/composer/vendor/bin
  - **macOS**: $HOME/.composer/vendor/bin
  - **Windows**: %USERPROFILE%\AppData\Roaming\Composer\vendor\bin
3. Перейдите в каталог с вашими проектами
  ```bash
cd /etc/www
```
4. Следующая команда создаст новый каталог с именем `mycrm` (в каталоге где мы сейчас находимся) и установит модули, выбранные в процессе интерактивного опроса:
  ```bash
lemurro new mycrm
```
5. После успешного создания проекта можно переходить к настройке:
  - [Настройка API-модуля](10_API-Сервер_(api)/10_Настройка/10_Настройка.md)
  - [Настройка WEB-модуля](20_Клиент_Metronic_(web)/10_Настройка/10_Настройка.md)
  - [Настройка MOBILE-модуля](30_Клиент_Framework7_(mobile)/10_Настройка/10_Настройка.md)

## Полный синтаксис команды
```bash
lemurro new mycrm --lv=latest --api --web --mobile --skip --silent
```
Обязательные аргументы и опции:
- `lemurro new` - команда создания нового проекта
- `mycrm` - имя (каталог) проекта
- `--lv=latest` - номер версии Lemurro для установки, [полный список версий](https://github.com/Lemurro/api/tags) или слово `latest`, для установки последней стабильной версии

Опции установки отдельных модулей, если опцию не указать модуль не будет установлен:
- `--api` - api-сервер
- `--web` - web-клиент (браузерный клиент, основан на дизайн-шаблоне [Metronic](https://keenthemes.com/metronic))
- `--mobile` - mobile-клиент (мобильное приложение, основанное на фреймворке [Framework7](https://framework7.io) и упакованное [Cordova](https://cordova.apache.org))

Не обязательные опции:
- `--skip` - если используется команда отличная от простого `lemurro new mycrm` (с использованием опций), тогда эта опция отключит вопросы о необходимости выбора устанавливаемых модулей и версии Lemurro
- `--silent` - отключает вопрос `Continue installation (y|n)`, который показывается после отображения списка определённых параметров установки (имени проекта, версии Lemurro, списке устанавливаемых модулей)

### Например: `lemurro new mycrm --lv=latest --api --web --skip --silent`
- создаст каталог с именем проекта `mycrm`
- последней стабильной версией Lemurro
- модулями `api-сервер` и `web-клиент`
- пропустит вопрос о необходимости установки модуля `mobile-клиент`
- не станет останавливаться для подтверждения указанных параметров