src/v2.1/00_Введение.md
# Lemurro

Lemurro представляет собой скелет для разработки CRM-систем

Представляет собой 2 ядра для 2 частей системы
- Ядро `api-core` для разработки API-сервера `api` *(api)*
- Ядро `client-metronic-core-frontend` для разработки web-приложения `client-metronic` *(web)*

Реализованы самые часто используемые функции
- Регистрация \ аутентификация \ авторизация пользователей
- Справочники
- Разделы
- Безопасный вход под любым пользователем и возврат обратно
- Отправка email \ sms
- Логгирование действий пользователей

## Системные требования
- PHP >= 7.4.0
- PHP Extensions
  - fileinfo
  - iconv
  - json
  - mbstring
  - pdo_mysql

## Создание нового проекта
Lemurro использует пакетные менеджеры для управления зависимостями:
  - **Composer** для модуля `api` и `lemurro/installer`
  - **NPM** для модуля `web`

1. Скачайте установщик Lemurro через Composer:
    ```bash
    composer global require lemurro/installer
    ```
2. Поместите в ваши переменные среды путь до каталога с установленными глобально пакетами (если не делали этого ранее), это необходимо для получения доступа к команде `lemurro` отовсюду в командной строке, этот каталог расположен в разных местах в зависимости от вашей операционной системы:
    - **Linux**: `export PATH=$HOME/.config/composer/vendor/bin:$PATH`
    - **macOS**: `export PATH=$HOME/.composer/vendor/bin:$PATH`
    - **Windows**: `%USERPROFILE%\AppData\Roaming\Composer\vendor\bin`
3. Перейдите в каталог с вашими проектами
    ```bash
    cd /etc/www
    ```
4. Следующая команда создаст новый каталог с именем `mycrm` (в каталоге где мы сейчас находимся) и установит модули, выбранные в процессе интерактивного опроса:
    ```bash
    lemurro new mycrm
    ```
5. После успешного создания проекта можно переходить к настройке:
    - [Настройка API-модуля](10_API-Сервер_(api)/10_Настройка/10_Настройка.md)
    - [Настройка WEB-модуля](20_Клиент_Metronic_(web)/10_Настройка/10_Настройка.md)

## Полный синтаксис команды
```bash
lemurro new mycrm --lv=X.Y --api --web --skip --silent
```
Обязательные аргументы и опции:
- `lemurro new` - команда создания нового проекта
- `mycrm` - имя (каталог) проекта
- `--lv=X.Y` - номер версии Lemurro для установки, [полный список версий](https://github.com/Lemurro/api/tags)

Опции установки отдельных модулей, если опцию не указать модуль не будет установлен:
- `--api` - api-сервер
- `--web` - web-клиент (браузерный клиент, основан на дизайн-шаблоне [Metronic](https://keenthemes.com/metronic))

Не обязательные опции:
- `--skip` - если используется команда отличная от простого `lemurro new mycrm` (с использованием опций), тогда эта опция отключит вопросы о необходимости выбора устанавливаемых модулей и версии Lemurro
- `--silent` - отключает вопрос `Continue installation (y|n)`, который показывается после отображения списка определённых параметров установки (имени проекта, версии Lemurro, списке устанавливаемых модулей)

### Например: `lemurro new mycrm --lv=2.0 --api --web --skip --silent`
- создаст каталог с именем проекта `mycrm`
- Lemurro v2.0
- модулями `api-сервер` и `web-клиент`
- не станет останавливаться для подтверждения указанных параметров